@@ -1,0 +1,39 @@
+using System;
+using System.Runtime.InteropServices;
+using System.Runtime.CompilerServices;
+using System.ComponentModel;
+
+public delegate void Del ();
+
+public class Class0
+{
+	public event Del Evt0;
+	public event Del Evt1;
+}
+
+public class Class1
+{
+	public event Del Evt0;
+	public event Del Evt1;
+	public event Del Evt2;
+	public event Del Evt3;
+}
+
+public class Class2
+{
+}
+
+public class Class3
+{
+	public event Del Evt4;
+	public event Del Evt5;
+	public event Del Evt6;
+}
+
+public class Class
+{
+	public static void Main ()
+	{
+	
+	}
+}
